<resources>
    <string name="app_name">WiseWallet</string>
    <string name="App_Logo">App Logo</string>
    <string name="TextView">TextView</string>
    <string name="Button">Button</string>
    <string name="x">Save Now, Spend later..</string>
    <string name="y">Sign-Up</string>
    <string name="z">New User? Create one..</string>
    <string name="a">Verify-OTP</string>
    <string name="b">User Name</string>
    <string name="c">Enter-OTP</string>
    <string name="d">WiseWallet!</string>
    <string name="e">Sign In</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Welcome!</string>

    <string name="c1">Your Money. Your Way.</string>
    <string name="m1">Welcome to WiseWallet, your personal finance assistant.
        We are here to help you take control of your finances</string>

    <string name="c3">Effortless Expense Tracking</string>
    <string name="m3">We automatically parse bank transaction SMS messages from your device to extract and visualize your financial data.</string>

    <string name="c4">Manual Transaction Entry</string>
    <string name="m4">You can also manually enter your transaction data to keep track of your finances.</string>
    <string name="c5">Visualize Your Finances</string>
    <string name="m5">View monthly and yearly transaction data as interactive pie charts to gain insights into your spending habits.</string>

    <string name="c2">Phone Number Authentication</string>
    <string name="m2">We use Firebase phone number authentication to securely verify your identity and protect your financial data.</string>

</resources>